[gd_scene load_steps=24 format=3 uid="uid://rbwa4lkpmwc5"]

[ext_resource type="Theme" uid="uid://cv50vybyyb5tv" path="res://assets/ui_tema/ui_thema.tres" id="1_bu1pm"]
[ext_resource type="Script" uid="uid://bmwqjkhxg77us" path="res://sceans/gdscript/title.gd" id="1_qy0sv"]
[ext_resource type="PackedScene" uid="uid://ci5sk515mtrsf" path="res://sceans/scean/options.tscn" id="2_7u8id"]
[ext_resource type="Script" uid="uid://b8u5m111wgknx" path="res://sceans/scean/strat_option.gd" id="3_7u8id"]
[ext_resource type="Texture2D" uid="uid://b72xm8s042p66" path="res://assets/background_game.png" id="3_iixuf"]
[ext_resource type="Texture2D" uid="uid://cghwm312mk0em" path="res://assets/title.png" id="4_6iro1"]
[ext_resource type="Texture2D" uid="uid://dupaq5pnhqwko" path="res://assets/ui_tema/pannel/pannel3.png" id="4_dp07s"]
[ext_resource type="PackedScene" uid="uid://c74q4gpxfvsd8" path="res://sceans/scean/ranking.tscn" id="4_rbnig"]
[ext_resource type="Texture2D" uid="uid://cvd3k6rjyyw35" path="res://assets/ui_tema/pannel/pannel2.png" id="14_ed4po"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iixuf"]
texture = ExtResource("4_dp07s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48ybr"]
texture = ExtResource("14_ed4po")

[sub_resource type="Animation" id="Animation_bu1pm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("start_chek:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7u8id"]
resource_name = "chek_start_off"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("start_chek:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.707107, 1.86607),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_iixuf"]
resource_name = "chek_start_on"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("start_chek:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.707107, 1.86607),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dp07s"]
resource_name = "ui_off"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(2.54912, 1, 0.233258),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.01), Vector2(0.01, 0.01)]
}

[sub_resource type="Animation" id="Animation_n6vug"]
resource_name = "ui_on"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(2.92817, 1, 0.435275),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(1, 0.01), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6iro1"]
_data = {
&"RESET": SubResource("Animation_bu1pm"),
&"chek_start_off": SubResource("Animation_7u8id"),
&"chek_start_on": SubResource("Animation_iixuf"),
&"ui_off": SubResource("Animation_dp07s"),
&"ui_on": SubResource("Animation_n6vug")
}

[sub_resource type="Animation" id="Animation_rxqeb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title_button:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title_button/RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("title_button/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("title_button/title:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("title_button/title:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(104, 48)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("load_chek:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_026e8"]
resource_name = "load_check_off"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("load_chek:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1.86607),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_d617v"]
resource_name = "load_check_on"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("load_chek:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1.86607),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ln283"]
resource_name = "title"
length = 3.0
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title_button/title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(104, 48), Vector2(104, 40), Vector2(104, 48)]
}

[sub_resource type="Animation" id="Animation_6iro1"]
resource_name = "title_on"
length = 2.0
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title_button:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1.07177, 1, 0.594604),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(1, 0.01), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("title_button/RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 1.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("title_button/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("title_button/title:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ln283"]
_data = {
&"RESET": SubResource("Animation_rxqeb"),
&"load_check_off": SubResource("Animation_026e8"),
&"load_check_on": SubResource("Animation_d617v"),
&"title": SubResource("Animation_ln283"),
&"title_on": SubResource("Animation_6iro1")
}

[node name="title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bu1pm")
script = ExtResource("1_qy0sv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
texture = ExtResource("3_iixuf")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.462745, 1, 1, 0.211765)

[node name="title_button" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -239.0
offset_right = 367.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 244)

[node name="title" type="TextureRect" parent="title_button"]
layout_mode = 0
offset_left = 104.0
offset_top = 48.0
offset_right = 606.0
offset_bottom = 194.0
texture = ExtResource("4_6iro1")
expand_mode = 1
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="title_button"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -426.0
offset_top = -184.0
offset_right = 408.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.27451, 0.694118, 0.882353, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[wave]フェイク・メイズ
タイムアタック!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="title_button"]
layout_mode = 0
offset_left = 254.0
offset_top = 191.0
offset_right = 417.0
offset_bottom = 441.0
theme_override_constants/separation = 32

[node name="Button" type="Button" parent="title_button/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "スタート"

[node name="Button3" type="Button" parent="title_button/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "設定"

[node name="Button2" type="Button" parent="title_button/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "終了"

[node name="options" parent="." instance=ExtResource("2_7u8id")]
visible = false
layout_mode = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_iixuf")

[node name="start_option" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -256.0
offset_right = 405.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(397, 254)
script = ExtResource("3_7u8id")

[node name="RichTextLabel" type="RichTextLabel" parent="start_option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.5
offset_top = -216.0
offset_right = 345.5
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 48
text = "難易度設定"
horizontal_alignment = 1

[node name="difficulty" type="HBoxContainer" parent="start_option"]
layout_mode = 0
offset_left = 88.0
offset_top = 103.0
offset_right = 719.0
offset_bottom = 144.0
theme_override_constants/separation = 20

[node name="easy" type="Button" parent="start_option/difficulty"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "イージー"

[node name="normal" type="Button" parent="start_option/difficulty"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ノーマル"

[node name="hard" type="Button" parent="start_option/difficulty"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ハード"

[node name="extra" type="Button" parent="start_option/difficulty"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "エクストラ"

[node name="AdvancedSettingButton" type="CheckButton" parent="start_option"]
layout_mode = 0
offset_left = 295.0
offset_top = 151.0
offset_right = 472.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 32
text = "詳細設定"

[node name="AdvancedSetting" type="Control" parent="start_option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.5
offset_top = -49.0
offset_right = 341.5
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="start_option/AdvancedSetting"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.5
offset_top = -91.0
offset_right = 150.5
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 20
columns = 2

[node name="MapSize" type="OptionButton" parent="start_option/AdvancedSetting/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
alignment = 1
selected = 1
item_count = 5
popup/item_0/text = "11x11"
popup/item_0/id = 0
popup/item_1/text = "21x21"
popup/item_1/id = 1
popup/item_2/text = "31x31"
popup/item_2/id = 2
popup/item_3/text = "41x41"
popup/item_3/id = 3
popup/item_4/text = "85x85"
popup/item_4/id = 4

[node name="UsingItem" type="CheckButton" parent="start_option/AdvancedSetting/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_pressed = true
text = "アイテムの使用"

[node name="TrapInstallation" type="CheckButton" parent="start_option/AdvancedSetting/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
button_pressed = true
text = "トラップの設置"

[node name="DarkMode" type="CheckButton" parent="start_option/AdvancedSetting/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "暗闇"

[node name="Label" type="Label" parent="start_option/AdvancedSetting"]
layout_mode = 0
offset_left = 61.0
offset_top = -7.0
offset_right = 173.0
offset_bottom = 10.0
text = "マップサイズ"

[node name="name_label" type="Label" parent="start_option"]
layout_mode = 0
offset_left = 263.0
offset_top = 339.0
offset_right = 519.0
offset_bottom = 356.0
text = "プレイヤー名"

[node name="Ranking_save" type="HBoxContainer" parent="start_option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = 103.0
offset_right = 124.5
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="player_name" type="LineEdit" parent="start_option/Ranking_save"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
placeholder_text = "プレイヤー名(10文字以内)"
max_length = 10

[node name="MapSave" type="CheckButton" parent="start_option/Ranking_save"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "マップの保存"

[node name="back" type="Button" parent="start_option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.5
offset_top = 176.0
offset_right = -147.5
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "もどる"

[node name="start" type="Button" parent="start_option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 134.5
offset_top = 184.0
offset_right = 270.5
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "はじめる"

[node name="start_chek" type="Panel" parent="start_option"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -83.5
offset_right = 217.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(217.5, 87.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_48ybr")

[node name="Label" type="Label" parent="start_option/start_chek"]
layout_mode = 0
offset_left = 77.5
offset_top = 13.5
offset_right = 349.5
offset_bottom = 82.5
theme_override_font_sizes/font_size = 32
text = "本当にこの設定で
はじめますか？"
horizontal_alignment = 1

[node name="no_player" type="Label" parent="start_option/start_chek"]
visible = false
layout_mode = 0
offset_left = 53.5
offset_top = 12.5
offset_right = 391.5
offset_bottom = 93.5
theme_override_font_sizes/font_size = 25
text = "名前が設定されていない場合
ランキングに乗りません
よろしいですか？"
horizontal_alignment = 1

[node name="start" type="Button" parent="start_option/start_chek"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.5
offset_top = 17.0
offset_right = 164.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "はじめる"

[node name="back" type="Button" parent="start_option/start_chek"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = 17.0
offset_right = -14.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "もどる"

[node name="AnimationPlayer" type="AnimationPlayer" parent="start_option"]
libraries = {
&"": SubResource("AnimationLibrary_6iro1")
}

[node name="Ranking" parent="." instance=ExtResource("4_rbnig")]
visible = false
layout_mode = 1

[node name="ranking_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -241.0
offset_top = -89.0
offset_right = -57.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "ランキング"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ln283")
}

[node name="load_chek" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -83.5
offset_right = 217.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(217.5, 87.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_48ybr")

[node name="Label" type="Label" parent="load_chek"]
layout_mode = 0
offset_left = 77.5
offset_top = 13.5
offset_right = 349.5
offset_bottom = 82.5
theme_override_font_sizes/font_size = 32
text = "この設定を
適応しますか?"
horizontal_alignment = 1

[node name="With_map" type="Label" parent="load_chek"]
visible = false
layout_mode = 0
offset_left = 54.0
offset_top = 30.0
offset_right = 392.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 25
text = "この設定とマップ情報を
適応しますか?"
horizontal_alignment = 1

[node name="load" type="Button" parent="load_chek"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.5
offset_top = 17.0
offset_right = 164.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "適用する"

[node name="back" type="Button" parent="load_chek"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = 17.0
offset_right = -14.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "もどる"

[connection signal="load_aset_on" from="." to="start_option" method="_on_title_load_aset_on"]
[connection signal="pressed" from="title_button/VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="title_button/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="title_button/VBoxContainer/Button2" to="." method="_on_end_pressed"]
[connection signal="option_offed" from="options" to="." method="_on_options_option_offed"]
[connection signal="load_back" from="start_option" to="." method="_on_start_option_load_back"]
[connection signal="start_option_offed" from="start_option" to="." method="_on_start_option_offed"]
[connection signal="toggled" from="start_option/AdvancedSettingButton" to="start_option" method="_on_advanced_setting_button_toggled"]
[connection signal="item_selected" from="start_option/AdvancedSetting/GridContainer/MapSize" to="start_option" method="_on_map_size_item_selected"]
[connection signal="toggled" from="start_option/AdvancedSetting/GridContainer/UsingItem" to="start_option" method="_on_using_item_toggled"]
[connection signal="toggled" from="start_option/AdvancedSetting/GridContainer/TrapInstallation" to="start_option" method="_on_trap_installation_toggled"]
[connection signal="toggled" from="start_option/AdvancedSetting/GridContainer/DarkMode" to="start_option" method="_on_dark_mode_toggled"]
[connection signal="text_changed" from="start_option/Ranking_save/player_name" to="start_option" method="_on_player_name_text_changed"]
[connection signal="toggled" from="start_option/Ranking_save/MapSave" to="start_option" method="_on_map_save_toggled"]
[connection signal="pressed" from="start_option/back" to="start_option" method="_on_back_pressed"]
[connection signal="pressed" from="start_option/start" to="start_option" method="_on_start_pressed"]
[connection signal="pressed" from="start_option/start_chek/start" to="start_option" method="_on_start_start_chek_pressed"]
[connection signal="pressed" from="start_option/start_chek/back" to="start_option" method="_on_back_start_check_pressed"]
[connection signal="ranking_off" from="Ranking" to="." method="_on_ranking_ranking_off"]
[connection signal="pressed" from="ranking_button" to="." method="_on_ranking_button_pressed"]
[connection signal="pressed" from="load_chek/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="load_chek/back" to="." method="_on_back_pressed"]
